vlib/v/checker/tests/struct_unknown_field.vv
struct Test {
	foo bool
}

fn main() {
	t := Test{
		foo: true
		bar: false
	}
	_ = t
}
